# bazel-playground

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  requirements.in  requirements_lock.txt
app/: BUILD.bazel  calculator.py  calculator_test.py
tools/metadata/: workspace_status.sh
tools/testrunner/: BUILD.bazel  testrunner.py
