bazel_dep(name = "rules_python", version = "0.20.0")
bazel_dep(name = "buildifier_prebuilt", version = "6.0.0.1")
bazel_dep(name = "rules_nodejs", version = "5.8.2")

pip = use_extension("@rules_python//python:extensions.bzl", "pip")

pip.parse(
    name = "pip",
    requirements_lock = "//:requirements_lock.txt",
)

use_repo(pip, "pip")

# Specify python toolchain instead of using the host version
python = use_extension("@rules_python//python:extensions.bzl", "python")

python.toolchain(
    name = "python3_11",
    python_version = "3.11",
)

use_repo(python, "python3_11_toolchains")

register_toolchains(
    "@python3_11_toolchains//:all",
)
