load("@rules_python//python:defs.bzl", "py_library")
load("@pip//:requirements.bzl", "requirement")

py_library(
    name = "testrunner",
    testonly = True,
    srcs = ["testrunner.py"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("unittest-xml-reporting"),
    ],
)
